# m5-burn

./: Cargo.toml  README.md
models/burn/: m5.mpk
pytorch-import/: Cargo.toml  build.rs
pytorch-import/model/: Cargo.toml
pytorch-import/model/src/: lib.rs
pytorch-import/pytorch/: m5_model_weights.pt
pytorch-import/src/: main.rs  model.rs
src/model/: mod.rs
